--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         </div>
         <div class="wrapBtn">
-            <button class="selection">Rock</button>
-            <button class="selection">Paper</button>
-            <button class="selection">Scissors</button>
+            <button id="btn1" class="selection">✊</button>
+            <button id="btn2" class="selection">✋</button>
+            <button id="btn3" class="selection">✌</button>
         </div>
     </div>
     <script src="script.js"></script>
