--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div class="finalResult"></div>
+                            <div id="final" class="finalResult"></div>
                         </td>
                     </tr>
                 </div>
